--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_book2">BookActivity2</string>
 
+    <string name="intercom_gcm_sender_id">YOUR_SENDER_ID</string>
+
 </resources>
