Work with George

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="title_activity_book2">BookActivity2</string>
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="banner_ad_unit_id_correct">ca-app-pub-7832891006427470/5345932942</string>
+    <string name="rateApp">This message has been sent from the Android app Draw. Download the app from http://www.google.com</string>
+    <string name="menu_about">About Settings</string>
+    <string name="menu_subscribe">Subscribe Settings</string>
 
 
 </resources>
